--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -1,13 +1,15 @@
-streamlit>=1.28.0
-tensorflow>=2.20.0
-transformers>=4.30.0
-numpy>=1.24.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-plotly>=5.14.0
-Pillow>=10.0.0
-tf-keras>=2.20.0
-gdown>=4.7.0
-tensorflow
+streamlit==1.31.1
 
+tensorflow==2.13.0
+tf-keras==2.13.0
 
+transformers==4.35.2
+
+numpy==1.24.3
+pandas==2.0.3
+
+matplotlib==3.7.2
+plotly==5.18.0
+Pillow==10.1.0
+
+gdown==4.7.1
