--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -1,6 +1,6 @@
 streamlit==1.31.1
 
-tensorflow==2.13.0
+tensorflow
 tf-keras==2.13.0
 
 transformers==4.35.2
@@ -13,3 +13,4 @@ plotly==5.18.0
 Pillow==10.1.0
 
 gdown==4.7.1
+
