--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -1,13 +1,12 @@
 streamlit==1.31.1
 
-tensorflow
-tf-keras==2.13.0
-
+tensorflow==2.13.0
 transformers==4.35.2
 
 numpy==1.24.3
-pandas==2.0.3
+protobuf==3.20.3
 
+pandas==2.0.3
 matplotlib==3.7.2
 plotly==5.18.0
 Pillow==10.1.0
