--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -1,11 +1,12 @@
-streamlit==1.31.1
-tensorflow==2.16.1
-transformers==4.38.1
-numpy==1.26.4
-pandas==2.2.0
-matplotlib==3.8.3
-plotly==5.19.0
-Pillow==10.2.0
-gdown==5.1.0
 
 
+streamlit==1.39.0
+tensorflow-cpu==2.15.0
+transformers==4.35.2
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+plotly==5.18.0
+Pillow==10.1.0
+gdown==4.7.1
+protobuf==3.20.3
